--- a/style.css
+++ b/style.css
@@ -3,110 +3,103 @@
     src: url(./Playwrite_HU/PlaywriteHU-VariableFont_wght.ttf);
 }
 
-button{
+button {
     border-radius: 23px !important;
     padding-left: 15px !important;
     padding-right: 15px !important;
-
 }
-.form-select{
+
+.form-select {
     border-radius: 23px !important;
 }
-.form-select:hover{
-    cursor:pointer;
+.form-select:hover {
+    cursor: pointer;
 }
 
-.logo-first-part{
+.logo-first-part {
     color: orange;
     font-family: 'myfont';
     font-weight: bolder;
 }
-.logo-sec-part{
+.logo-sec-part {
     color: rgb(23, 163, 23);
     font-weight: bold;
     font-family: monospace;
 }
-.navbar-brand{
+.navbar-brand {
     width: 20%;
     height: 80px;
 }
-.logo{
+.logo {
     width: 60px;
 }
 
-.mynavbar{
+.mynavbar {
     font-family: monospace;
     color: rgb(23, 163, 23) !important;
-
 }
-.search{
-    background-color: orange !important ;
+.search {
+    background-color: orange !important;
     color: white !important;
 }
-.search:hover{
-    background-color: rgb(255, 201, 100) !important ;
+.search:hover {
+    background-color: rgb(255, 201, 100) !important;
     color: rgb(134, 134, 134) !important;
 }
 
-.btn-outline{
+.btn-outline {
     border: 1px solid rgb(23, 163, 23) !important;
     color: rgb(23, 163, 23) !important;
 }
-.btn-outline:hover{
+.btn-outline:hover {
     background-color: rgb(23, 163, 23) !important;
     color: white !important;
 }
-.navv{
+.navv {
     position: relative;
     z-index: 10;
-    /* background-color: aliceblue; */
     top: 0;
 }
-.first-sec{
-    /* width: 700px; */
+.first-sec {
     height: 120vh;
     background-image: url(./images/differ.webp);
     background-size: cover;
-    border-image:fill 0 linear-gradient(rgba(177, 177, 177, 0.28), #00000087) !important;
+    border-image: fill 0 linear-gradient(rgba(177, 177, 177, 0.28), #00000087) !important;
 }
-.card{
+.card {
     box-shadow: 1px 1px 5px rgb(81, 81, 81) !important;
-
 }
-.clear{
+.clear {
     color: white !important;
     border: 1px solid white !important;
 }
-.main span{
+.main span {
     font-size: 90px;
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
     animation-name: main-animation;
     animation-duration: 5s;
 }
 
-#sec-2{
+#sec-2 {
     display: flex;
 }
-.search a{
+.search a {
     text-decoration: none;
     color: white;
 }
 #grocery {
     width: 160px;
     position: relative;
-    
     animation-name: grocery;
-    animation-duration: 10s;
+    animation-duration: 25s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-    /* animation-direction: alternate; */
 }
 
 @keyframes grocery {
     0% {
-        filter: drop-shadow(1px 1px 2px rgb(112, 111, 111));
+        filter: drop-shadow(0.5px 0.5px 1px rgb(242, 237, 140));
         left: 0px;
         transform: rotateY(0deg);
     }
@@ -120,29 +113,61 @@ button{
     100% {
         left: 0px;
         transform: rotateY(180deg);
-        filter: drop-shadow(1px 1px 2px rgb(112, 111, 111));
-
+        filter: drop-shadow(0.5px 0.5px 1px rgb(242, 237, 140));
     }
 }
 
-/* @keyframes main-animation{
-    0%{
-        color: aqua;
-        .one{
-            display: inline;
-        }
-        .two,.three,.four,.five,.six,.seven,.eight{
-            display: none;
-        }
+/* Media query for devices between 426px and 768px */
+@media screen and (min-width:426px) and (max-width:768px) {
+    #grocery {
+        width: 90px;
     }
-    
-    100%{
-        background-color: aqua;
-    }
-} */
 
-@media screen and (max-width:768px){
+    @keyframes grocery {
+        0% {
+            filter: drop-shadow(0.5px 0.5px 1px rgb(242, 237, 140));
+            left: 0px;
+            transform: rotateY(0deg);
+        }
+        50% {
+            left: 650px;
+            transform: rotateY(0deg);
+        }
+        50.01% {
+            transform: rotateY(180deg);
+        }
+        100% {
+            left: 0px;
+            transform: rotateY(180deg);
+            filter: drop-shadow(0.5px 0.5px 1px rgb(242, 237, 140));
+        }
+    }
+}
+
+/* Media query for devices 425px and below */
+@media screen and (max-width:426px) {
+    
     #grocery {
         width: 60px;
+    }
+
+    @keyframes grocery {
+        0% {
+            filter: drop-shadow(0.5px 0.5px 1px rgb(242, 237, 140));
+            left: 0px;
+            transform: rotateY(0deg);
+        }
+        50% {
+            left: 250px;
+            transform: rotateY(0deg);
+        }
+        50.01% {
+            transform: rotateY(180deg);
+        }
+        100% {
+            left: 0px;
+            transform: rotateY(180deg);
+            filter: drop-shadow(0.5px 0.5px 1px rgb(242, 237, 140));
+        }
     }
 }
