--- a/style.css
+++ b/style.css
@@ -68,7 +68,28 @@ button {
     background-size: cover;
     border-image: fill 0 linear-gradient(rgba(177, 177, 177, 0.28), #00000087) !important;
 } */
- 
+.parent{
+    /* border: 2px solid red; */
+    display: flex !important;
+    width: 100%;
+    height: 100vh;
+}
+.parent img{
+    flex-wrap: 1;
+    -webkit-box-reflect: below 4px linear-gradient(transparent , rgba(0, 0, 0, 0.15));
+    width: 75%;
+    /* height: 70vh; */
+    aspect-ratio:1/1;
+    object-fit: contain;
+    border: 3px solid red;
+    border-radius: 10px !important;
+    transition: all ease-in-out 0.5s;
+
+}
+
+.parent img:hover{
+    width: 100%;
+}
 .card {
     box-shadow: 1px 1px 5px rgb(81, 81, 81) !important;
 }
